--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "An Electron app ",
   "main": "index.js",
   "scripts": {
+    "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pablo Cortez",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "electron": "^27.0.4"
+  }
 }
